--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/pokemonapicourse
-spring.datasource.username=postgres
-spring.datasource.password=test
+spring.datasource.url=jdbc:postgresql://192.168.127.86:5432/bkgout_checker
+spring.datasource.username=cpb_int
+spring.datasource.password=123cp!@#
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
+
+
+
+
