--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.bkgoutchecker</groupId>
 	<artifactId>api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>api</name>
 	<description>Bkgout Checker API</description>
 	<properties>
@@ -89,6 +90,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>bkgout_checker</finalName>
 	</build>
 
 </project>
