--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,14 @@ spring.datasource.password=123cp!@#
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 
+#UAT
+server.port=8096
+
 spring.jpa.show-sql=true
 
-
+spring.datasource.secondary.url=jdbc:postgresql://192.168.127.24:5432/tpsdb
+spring.datasource.secondary.username=postgres
+spring.datasource.secondary.password=123cp!@#
+spring.datasource.secondary.driver-class-name=org.postgresql.Driver
 
 
