--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,21 @@
-spring.datasource.url=jdbc:postgresql://192.168.127.86:5432/mail_sender
+#spring.datasource.url=jdbc:postgresql://192.168.127.86:5432/mail_sender
+#spring.datasource.username=postgres
+#spring.datasource.password=123cp!@#
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.hibernate.ddl-auto=update
+
+#PRO
+spring.datasource.url=jdbc:postgresql://192.168.101.5:5432/gfn_mail_db
 spring.datasource.username=postgres
 spring.datasource.password=123cp!@#
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 #UAT
-server.port=9010
+#server.port=9010
+
+#PRO
+server.port=8085
 
 spring.jpa.show-sql=true
 
@@ -26,10 +36,13 @@ logging.level.org.springframework.mail=DEBUG
 logging.level.org.springframework.mail.javamail=DEBUG
 spring.mail.default-encoding=UTF-8
 
-# Bank API credentials
-soap.service.username=PANDA
-soap.service.password=PAnda@09
-soap.service.url=http://192.168.127.31:7003/CPB.MB.TWS/services
+# Bank API credentials UAT
+#soap.service.username=PANDA
+#soap.service.password=PAnda@09
+#soap.service.url=http://192.168.127.31:7003/CPB.MB.TWS/services
 
-
+# Bank API credentials PRO
+soap.service.username=APPLOS
+soap.service.password=CPlos@123!@#
+soap.service.url=http://192.168.101.20:7003/CPB.MB.TWS/services
 
